# PARP-23L

./: .gitignore  README.md  adventure.pl
haskel/: README.md
haskell/: README.md  haskel.cabal  haskell.cabal  playthrough.txt
haskell/src/: Main.hs
haskell/src/Rules/: Checking.hs  Colors.hs  Fact.hs  Help.hs  Inventory.hs  Item.hs  Location.hs  Look.hs  Movement.hs  Object.hs  Person.hs  Recipe.hs  State.hs  Talk.hs  Utility.hs
haskell/src/Story/: City.hs  House.hs  Janitor.hs  Museum.hs  Office.hs  Police.hs
kolos/: haskell.md  prolog.md
prolog/: README.md  adventure.pl  play.txt  playthrough.pl
prolog/rules/: help.pl  inventory.pl  look.pl  movement.pl  scan.pl  talk.pl  use.pl
prolog/story/: city.pl  house.pl  janitor.pl  museum.pl  office.pl  paths.pl  police.pl  story.pl
rules/: help.pl  look.pl  movement.pl
story/: paths.pl  story.pl
