cabal-version:       3.0

name:                haskell
version:             0.1.0.0
license:             NONE
author:              Bartłomiej Krawczyk, Mateusz Brzozowski, Jakub Winter
maintainer:
build-type:          Simple
extra-source-files:  README.md

executable haskell
  main-is:             Main.hs
  other-modules:       Rules.Colors, Rules.Help, Rules.Object, Rules.State, Rules.Utility
  build-depends:       base ^>=4.17.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
